--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ os: osx
 xcode_project: QuickHatch/QuickHatch.xcodeproj
 xcode_scheme: QuickHatch
 xcode_destination: platform=iOS Simulator,OS=13.2.2,name=iPhone 11
+branches:
+  only: 
+    - master
