--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ os: osx
 jobs:
   include:
       script: 
+        - cd QuickHatch
         - swiftlint
         - xcodebuild clean build test -project QuickHatch/QuickHatch.xcodeproj -scheme QuickHatch -destination "platform=iOS Simulator,name=iPhone 11,OS=13.2.2" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -enableCodeCoverage YES | xcpretty -c
       after_script: bash <(curl -s https://codecov.io/bash) -t 71c8458c-2504-4fc3-8cc0-ae6f3f964b8f
